--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: xcodebuild build -v
+      run: xcodebuild build -verbose
     - name: Run tests
-      run: xcodebuild test -v
+      run: xcodebuild test -verbose
