--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Build
       run: xcodebuild build -scheme AGInputControls -verbose
     - name: Run tests
-      run: xcodebuild test -verbose
+      run: xcodebuild test -scheme AGInputControls -verbose
