--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: xcodebuild build -scheme AGInputControls -verbose
+    # - name: Build
+    #   run: xcodebuild build -scheme AGInputControls -verbose
     - name: Run tests
-      run: xcodebuild -scheme AGInputControlsTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=14.3' test 
+      run: xcodebuild -scheme AGInputControlsTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=14.4' test 
